2009-02-25  Werner Koch  <wk@g10code.com>

	* mapihelp.cpp (get_gpgoldraftinfo_tag): New.
	(mapi_get_gpgol_draft_info, mapi_set_gpgol_draft_info): New.
	* ext-commands.cpp (DoCommand): Save encryption selection.
	(InstallCommands): Get encryption selection from the draft info.
	* mimemaker.c (finalize_message): Delete the property.

2009-01-28  Werner Koch  <wk@g10code.com>

	* mimeparser.c (t2body): Take care of x-pkcs7-mime as used by
	native OL signed messages.
	(mime_decrypt): Ditto.

2009-01-16  Werner Koch  <wk@g10code.com>

	* engine-assuan.c (attach_thread_input_wndw_proc) 
	(attach_thread_input): Enable code.
	(async_worker_thread): Replace WFMO by MsgWaitForMultipleObjects
	and add message dispatcher loops.

2008-11-27  Werner Koch  <wk@g10code.com>

	* mapihelp.cpp (mapi_get_sender): Extract the CN name if available.

2008-11-26  Werner Koch  <wk@g10code.com>

	* ext-commands.cpp (InstallCommands): Don't show status icon for
	non-gpgol messages.

	* config-dialog.c (start_key_manager): Remove.
	* ext-commands.cpp (DoCommand): Do not use start_key_manager as a
	fallback.

	* olflange.cpp (GpgolExt): Show new version warning only once.

	* dialogs.rc: Do not display the logo.  Move version info around.
	* dialogs.h (IDC_G10CODE_STRING): New.
	* olflange-dlgs.cpp (GPGOptionsDlgProc): Active product page by a
	click on IDC_G10CODE_STRING.
	(set_labels): Remove the build date from the Version field.

2008-11-14  Werner Koch  <wk@g10code.com>

	* dialogs.rc: Remove preview-decrypt check button.
	* olflange-dlgs.cpp (set_labels): Ditto.

2008-11-13  Werner Koch  <wk@g10code.com>

	* engine.c (FILTER_BUFFER_SIZE): Increase from 4k to 128k.
	(switch_threads, clear_switch_threads): Remove.
	(engine_filter): Pulse event only if anything happened.  Break
	loop if input data has been put completely into the buffer.  Add a
	short delay for an idle loop.
	* engine-assuan.c (work_item_s): Increase buffer from 1k to 8k.
	(switch_threads, clear_switch_threads): Remove.
