@@ -40,7 +40,8 @@ void engine_assuan_cancel (void *cancel_data);
 int op_assuan_encrypt (protocol_t protocol, 
                        gpgme_data_t indata, gpgme_data_t outdata,
                        engine_filter_t notify_data, void *hwnd,
-                       char **recipients, protocol_t *r_used_protocol,
+                       const char *sender, char **recipients,
+                       protocol_t *r_used_protocol,
                        struct engine_assuan_encstate_s **r_encstate);
 int op_assuan_encrypt_bottom (struct engine_assuan_encstate_s *encstate,
                               int cancel);
