@@ -1,3 +1,11 @@
+2009-02-26  Werner Koch  <wk@g10code.com>
+
+	* engine.c (engine_encrypt_prepare): Add arg SENDER.
+	* engine-assuan.c (op_assuan_encrypt): Ditto.
+	* mimemaker.c (do_mime_sign): Free sender string.
+	(mime_encrypt): Pass the sender address to the engine.
+	(mime_sign_encrypt): Ditto.
+
 2009-02-25  Werner Koch  <wk@g10code.com>
 
 	* mapihelp.cpp (get_gpgoldraftinfo_tag): New.
